RESOLVED FIXED203822
Fix flaky tests in http/tests/cache/disk-cache
https://bugs.webkit.org/show_bug.cgi?id=203822
Summary Fix flaky tests in http/tests/cache/disk-cache
Alex Christensen
Reported 2019-11-04 13:07:05 PST
Fix flaky tests in http/tests/cache/disk-cache
Attachments
Patch (11.52 KB, patch)
2019-11-04 13:08 PST, Alex Christensen
no flags
Patch (11.71 KB, patch)
2019-11-04 20:03 PST, Alex Christensen
youennf: review+
Alex Christensen
Comment 1 2019-11-04 13:08:49 PST
Alex Christensen
Comment 2 2019-11-04 20:03:59 PST
youenn fablet
Comment 3 2019-11-08 06:43:57 PST
Comment on attachment 382803 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382803&action=review > Source/WebKit/ChangeLog:8 > + Right now tests that set the cache model do so using a race condition. I think this will fix the flakyness we've observed. Is the plan to update TestExpectations at a later stage once the theory is validated? > Tools/WebKitTestRunner/TestInvocation.cpp:-552 > - WKContextSetCacheModel(TestController::singleton().context(), model); Should we try to remove WKContextSetCacheModel?
Alex Christensen
Comment 4 2019-11-08 13:24:49 PST
Comment on attachment 382803 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382803&action=review >> Source/WebKit/ChangeLog:8 >> + Right now tests that set the cache model do so using a race condition. I think this will fix the flakyness we've observed. > > Is the plan to update TestExpectations at a later stage once the theory is validated? Yes. >> Tools/WebKitTestRunner/TestInvocation.cpp:-552 >> - WKContextSetCacheModel(TestController::singleton().context(), model); > > Should we try to remove WKContextSetCacheModel? Yes.
Alex Christensen
Comment 5 2019-11-08 13:26:29 PST
Radar WebKit Bug Importer
Comment 6 2019-11-08 13:27:18 PST
Note You need to log in before you can comment on or make changes to this bug.